# NatWiki

./: Cargo.toml
src/: filters.rs  main.rs  nerds.rs
src/nerds/: encodings.rs  factors.rs  fibonacci.rs  ip.rs  mod.rs  parity.rs  power_form.rs  prime.rs  triangular.rs
templates/: 1.html  37.html  int.html
