[package]
name = "natwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
rug = { version = "1.24", default-features = false, features = ["integer"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1.4"
