[package]
name = "natwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
askama_escape = "0.10.3"
axum = "0.7"
num-traits = "0.2.18"
rand = "0.8"
rug = { version = "1.24", default-features = false, features = ["integer", "num-traits"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1.4"
